--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "bootstrap-social": "^5.1.1",
     "cross-fetch": "^2.1.0",
     "font-awesome": "^4.7.0",
+    "prop-types": "^15.6.0",
     "react": "^18.2.0",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
     "react-redux": "^8.0.5",
     "react-redux-form": "^1.16.8",
     "react-router-dom": "^4.2.2",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "reactstrap": "^9.1.4",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
